# bq40z50

./: CODEOWNERS  Cargo.toml  README.md  build.rs  deny.toml  device.yaml  device_R1.yaml  device_R3.yaml  device_R4.yaml  device_R5.yaml  device_r3.yaml  device_r5.yaml
.github/workflows/: ado.yml  check.yml  device-driver.yml  nostd.yml
ado_workflows/: test.yaml
examples/: single_read.rs  test.rs
src/: common.rs  consts.rs  error.rs  interface.rs  lib.rs  tests.rs
src/versions/: gen_r1.rs  gen_r3.rs  gen_r4.rs  gen_r5.rs  mod.rs  r1.rs  r3.rs  r4.rs  r5.rs
