[package]
name = "bq40z50-rx"
version = "0.3.0"
repository = "https://github.com/OpenDevicePartnership/bq40z50"
license = "MIT"
authors = ["Matteo Tullo <matteotullo@microsoft.com>"]
rust-version = "1.85"
description = "Platform-agnostic Rust driver for the Texas Instruments BQ40Z50 battery fuel (gas) gauge."
readme = "README.md"
keywords = ["TI", "battery", "fuel-gauge", "i2c", "driver"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/bq40z50"
include = [
	"/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
	"/device_R*.yaml",
]
edition = "2024"

[dependencies]
device-driver = { version = "1.0.3", default-features = false, features = [
	"yaml",
] }
defmt = { version = "0.3", optional = true }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-batteries-async = "0.2.0"
embassy-time = { version = "0.4.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }
embassy-time = { version = "0.4.0", features = ["std"] }
embassy-executor = { version = "0.9.0", features = [
	"arch-std",
	"executor-thread",
] }
static_cell = "2.1.1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"


[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "deny"

[features]
embassy-timeout = ["dep:embassy-time"]
defmt-03 = [
	"dep:defmt",
	"device-driver/defmt-03",
	"embedded-batteries-async/defmt",
	"embassy-time/defmt",
	"embassy-time/defmt-timestamp-uptime",
]
r1 = []
r3 = []
r4 = []
r5 = []
