[package]
name = "bq40z50-rx"
version = "0.8.1"
repository = "https://github.com/OpenDevicePartnership/bq40z50"
license = "MIT"
rust-version = "1.85"
description = "Platform-agnostic Rust driver for the Texas Instruments BQ40Z50 battery fuel (gas) gauge."
readme = "README.md"
keywords = ["TI", "battery", "fuel-gauge", "i2c", "driver"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/bq40z50"
include = [
	"/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
	"/device_r*.yaml",
]
edition = "2024"

[package.metadata.docs.rs]
features = ["r5"]

[dependencies]
device-driver = { version = "1.0.3", default-features = false }
defmt = { version = "0.3", optional = true }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-batteries-async = "0.3.0"
embassy-time = { version = "0.5.0", optional = true }
smbus-pec = { version = "1.0.1" }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }
embassy-time = { version = "0.5.0", features = ["std"] }
embassy-executor = { version = "0.9.1", features = [
	"arch-std",
	"executor-thread",
] }
static_cell = "2.1.1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"


[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "deny"
pedantic = "deny"

[features]
embassy-timeout = ["dep:embassy-time"]
defmt-03 = [
	"dep:defmt",
	"device-driver/defmt-03",
	"embedded-batteries-async/defmt",
	"embassy-time/defmt",
	"embassy-time/defmt-timestamp-uptime",
]
r1 = []
r3 = []
r4 = []
r5 = []
pec-lookup-table = ["smbus-pec/lookup-table"]
